force-app/main/default/objects/Placement__c/fields/Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Date__c</fullName>
    <label>Begin Date</label>
    <type>DateTime</type>
</CustomField>