force-app/main/default/objects/Placement__c/fields/Caregiver_child_as_a_surrogate_parent__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_child_as_a_surrogate_parent__c</fullName>
    <inlineHelpText>Caregiver understands they have responsibility to care for the child as a surrogate parent?</inlineHelpText>
    <label>Caregiver child as a surrogate parent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>