force-app/main/default/objects/Placement__c/fields/Caregiver_Corporal_Punishment_on_Child__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Corporal_Punishment_on_Child__c</fullName>
    <inlineHelpText>Caregiver understands they will not use corporal punishment on the child?</inlineHelpText>
    <label>Caregiver Corporal Punishment  on Child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>