force-app/main/default/objects/Placement__c/fields/Caregiver_has_financial_means_to_care__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_has_financial_means_to_care__c</fullName>
    <inlineHelpText>Caregiver has financial means to care for the child?</inlineHelpText>
    <label>Caregiver has financial means to care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>