force-app/main/default/objects/Placement__c/fields/Caregiver_has_or_will_apply_for_Medical__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_has_or_will_apply_for_Medical__c</fullName>
    <inlineHelpText>Caregiver has or will apply for Medical Assistance for the child?</inlineHelpText>
    <label>Caregiver has or will apply for Medical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>