force-app/main/default/objects/Placement__c/fields/Caregiver_is_committed_to_caring__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_is_committed_to_caring__c</fullName>
    <inlineHelpText>Caregiver is committed to caring long term for the child?</inlineHelpText>
    <label>Caregiver is committed to caring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>