force-app/main/default/objects/Placement__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>