force-app/main/default/objects/Placement__c/fields/Child_Removal__c.field-meta.xml
<CustomField>
    <fullName>Child_Removal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Removal</label>
    <referenceTo>Child_Removal__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>