force-app/main/default/objects/Placement__c/fields/COMAR_Rate_Category__c.field-meta.xml
<CustomField>
    <fullName>COMAR_Rate_Category__c</fullName>
    <label>COMAR Rate Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Foster Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>