force-app/main/default/objects/Placement__c/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <label>Contact Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>