force-app/main/default/objects/Placement__c/fields/CPA_Home_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Billing_Country__c</fullName>
    <label>CPA Home Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>