force-app/main/default/objects/Placement__c/fields/CPA_Home_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Billing_Street__c</fullName>
    <label>CPA Home Billing Street</label>
    <type>TextArea</type>
</CustomField>