force-app/main/default/objects/Placement__c/fields/CPA_Home_Id__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPA Home</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements (CPA Home Id)</relationshipLabel>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>