force-app/main/default/objects/Placement__c/fields/CPA_Home_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Provider_Id__c</fullName>
    <label>CPA Home Provider Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>