force-app/main/default/objects/Placement__c/fields/Entry_Date_and_Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date_and_Entry_Time__c</fullName>
    <label>Entry Date and Entry Time</label>
    <type>DateTime</type>
</CustomField>