force-app/main/default/objects/Placement__c/fields/Exit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>