force-app/main/default/objects/Placement__c/fields/Exit_Type__c.field-meta.xml
<CustomField>
    <fullName>Exit_Type__c</fullName>
    <inlineHelpText>1.Change in Placement should be used when a child is physically moving to a different placement/provider
2.Change in Placement Structure should be used when a child is not physically moving to a different placement/provider but the structure is changing (i.e. from Regular Foster Care to Pre-Adoptive Home)
3.Permanently Leaving Custody and Care should be used when a child is exiting foster care (Commitment Rescinded or changed to an Order of Protective Supervision)</inlineHelpText>
    <label>Exit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change in Placement</fullName>
            </value>
            <value>
                <fullName>Change in Placement Structure</fullName>
            </value>
            <value>
                <fullName>Permanently Leaving Custody and Care</fullName>
                <label>Permanently Leaving Custody &amp; Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>