force-app/main/default/objects/Placement__c/fields/Home_Assessment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Assessment_Completed_Date__c</fullName>
    <label>Home Assessment Completed Date</label>
    <type>Date</type>
</CustomField>