force-app/main/default/objects/Placement__c/fields/Home_has_adequate_sleeping_space__c.field-meta.xml
<CustomField>
    <fullName>Home_has_adequate_sleeping_space__c</fullName>
    <inlineHelpText>Home has adequate sleeping space for child?</inlineHelpText>
    <label>Home has adequate sleeping space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>