force-app/main/default/objects/Placement__c/fields/Home_has_appropriate_toilet_facilities__c.field-meta.xml
<CustomField>
    <fullName>Home_has_appropriate_toilet_facilities__c</fullName>
    <label>Home has appropriate toilet facilities?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>