force-app/main/default/objects/Placement__c/fields/Home_is_structurally_sound__c.field-meta.xml
<CustomField>
    <fullName>Home_is_structurally_sound__c</fullName>
    <inlineHelpText>Home is structurally sound?</inlineHelpText>
    <label>Home is structurally sound?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>