force-app/main/default/objects/Placement__c/fields/Initial_Criminal_Sex_Offender_CPS__c.field-meta.xml
<CustomField>
    <fullName>Initial_Criminal_Sex_Offender_CPS__c</fullName>
    <inlineHelpText>Initial Criminal, Sex Offender, CPS clearances have been completed for all persons in the household?</inlineHelpText>
    <label>Initial Criminal, Sex Offender, CPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>