force-app/main/default/objects/Placement__c/fields/Is_Exit_Placement_Submitted_for_approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Exit_Placement_Submitted_for_approval__c</fullName>
    <label>Is Exit Placement Submitted for approval</label>
    <length>10</length>
    <type>Text</type>
</CustomField>