force-app/main/default/objects/Placement__c/fields/Is_Placement_Reimbursible__c.field-meta.xml
<CustomField>
    <fullName>Is_Placement_Reimbursible__c</fullName>
    <label>Is Placement Reimbursible?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>