force-app/main/default/objects/Placement__c/fields/Kinship_FictiveKin_CaregiverRelationship__c.field-meta.xml
<CustomField>
    <fullName>Kinship_FictiveKin_CaregiverRelationship__c</fullName>
    <label>Kinship/FictiveKin CaregiverRelationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Non-Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>