force-app/main/default/objects/Placement__c/fields/Lives_Alone__c.field-meta.xml
<CustomField>
    <fullName>Lives_Alone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lives Alone</label>
    <type>Checkbox</type>
</CustomField>