force-app/main/default/objects/Placement__c/fields/Living_Address__c.field-meta.xml
<CustomField>
    <fullName>Living_Address__c</fullName>
    <formula>Address_Line_1__c +&apos; &apos;+ Address_Line_2__c+&apos; &apos;+ City__c +&apos; &apos;+ State__c + &apos; &apos;+ County__c +&apos; &apos;+  TEXT(Zip_Code__c)</formula>
    <label>Living Address</label>
    <type>Text</type>
</CustomField>