force-app/main/default/objects/Placement__c/fields/Living_Arrangement_Type__c.field-meta.xml
<CustomField>
    <fullName>Living_Arrangement_Type__c</fullName>
    <label>Living Arrangement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secured/Juvenile Justice Facility</fullName>
            </value>
            <value>
                <fullName>Kin/Fictive Kin Home</fullName>
            </value>
            <value>
                <fullName>Medical or Rehabilitative Facility</fullName>
            </value>
            <value>
                <fullName>Psychiatric Facility</fullName>
            </value>
            <value>
                <fullName>Runaway</fullName>
            </value>
            <value>
                <fullName>Independent Living</fullName>
            </value>
            <value>
                <fullName>Placed at Home</fullName>
            </value>
            <value>
                <fullName>Whereabouts Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>