force-app/main/default/objects/Placement__c/fields/Name_of_Facility__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Facility__c</fullName>
    <label>Name of Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>