force-app/main/default/objects/Placement__c/fields/Number_of_Days_Placement_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Placement_Open__c</fullName>
    <formula>TEXT(
IF(ISPICKVAL(Placement_Living_Arrangement_Type__c ,&apos;Placement&apos;), 

IF(ISBLANK(End_Date__c),
IF(DATEVALUE(Begin_Date__c)==TODAY(),0,TODAY()- DATEVALUE(Begin_Date__c)),
End_Date__c - DATEVALUE(Begin_Date__c)),


IF(ISBLANK(End_Date__c),
IF(Start_Date__c==TODAY(),0,TODAY()- Start_Date__c), 
End_Date__c - Start_Date__c))


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Placement Open</label>
    <type>Text</type>
</CustomField>