force-app/main/default/objects/Placement__c/fields/Placement_Living_Arrangement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Living_Arrangement_Type__c</fullName>
    <label>Placement/Living Arrangement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Living Arrangement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>