force-app/main/default/objects/Placement__c/fields/PlacementReimbursable__c.field-meta.xml
<CustomField>
    <fullName>PlacementReimbursable__c</fullName>
    <formula>IF( ISPICKVAL(Placement_Structure__c, &apos;Regular Foster Care&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
    <label>PlacementReimbursable</label>
    <type>Text</type>
</CustomField>