force-app/main/default/objects/Placement__c/fields/Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Provider_Address__c</fullName>
    <formula>Provider__r.BillingStreet+&apos; &apos;+ Provider__r.BillingCity +&apos; &apos;+ Provider__r.BillingState +&apos; &apos;+ Provider__r.BillingCountry +&apos; &apos;+ Provider__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Address</label>
    <type>Text</type>
</CustomField>