force-app/main/default/objects/Placement__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <formula>Provider__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Type</label>
    <type>Text</type>
</CustomField>