force-app/main/default/objects/Placement__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Case</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Service Case is closed</errorMessage>
        <filterItems>
            <field>Service_Case__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Close</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>