force-app/main/default/objects/Placement__c/fields/Updated_Record__c.field-meta.xml
<CustomField>
    <fullName>Updated_Record__c</fullName>
    <label>Updated Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>