force-app/main/default/objects/Placement__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <formula>Provider__r.Number_of_Beds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>