force-app/main/default/objects/Placement__c/fields/Why_are_the_child_s_whereabouts_unknown__c.field-meta.xml
<CustomField>
    <fullName>Why_are_the_child_s_whereabouts_unknown__c</fullName>
    <label>Why are the child’s whereabouts unknown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>