force-app/main/default/objects/Placement__c/recordTypes/Placement_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Placement_Record_Type</fullName>
    <active>false</active>
    <label>Placement Record Type</label>
</RecordType>