force-app/main/default/objects/Placement__c/validationRules/Begin_Date_not_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_not_be_future</fullName>
    <active>false</active>
    <errorConditionFormula>Begin_Date__c &lt;= NOW()</errorConditionFormula>
    <errorMessage>Begin Date should not be Future Date</errorMessage>
</ValidationRule>