force-app/main/default/objects/Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Placement_Approval_Status__c</columns>
    <columns>Exit_Approval_Status__c</columns>
    <columns>Provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>